--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,30 @@
 venv
+.idea
+__pycache__
+*.py[cod]
+data.pickle
+.env
+db.sqlite3
 *.pyc
-.svn
-.cvs
-tmp/*
+.DS_Store
+__pycache__/
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+pip-wheel-metadata/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
